@@ -180,7 +180,7 @@ public class Database {
      * @param flags Optional flags for this operation, combined with
      *        bitwise OR. Possible flags are:
      *      <ul>
-     *       <li><code>Const.HAM_WRITE_THROUGH</code></li>
+     *       <li><code>Const.HAM_ENABLE_FSYNC</code></li>
      *            Immediately write modified pages to
      *            the disk. This slows down all Database operations, but may
      *            save the Database integrity in case of a system crash.
@@ -228,7 +228,7 @@ public class Database {
      *            Enables logging/recovery for this Database. Not allowed in
      *            combination with <code>Const.HAM_IN_MEMORY_DB</code>,
      *            <code>Const.HAM_DISABLE_FREELIST_FLUSH</code> and
-     *            <code>Const.HAM_WRITE_THROUGH</code>.
+     *            <code>Const.HAM_ENABLE_FSYNC</code>.
      *       <li><code>Const.HAM_ENABLE_TRANSACTIONS</code></li>
      *            Enables Transactions for this Database.
      *      </ul>
@@ -296,7 +296,7 @@ public class Database {
      *            Opens the file for reading only. Operations which need
      *            write access (i.e. <code>Database.insert</code>) will return
      *            <code>Const.HAM_DB_READ_ONLY</code>.
-     *       <li><code>Const.HAM_WRITE_THROUGH</code></li>
+     *       <li><code>Const.HAM_ENABLE_FSYNC</code></li>
      *            Immediately write modified pages to the disk.
      *            This slows down all Database operations, but could save
      *            the Database integrity in case of a system crash.
@@ -326,7 +326,7 @@ public class Database {
      *            <code>Const.HAM_NEED_RECOVERY</code>, if the Database
      *            is in an inconsistent state. Not allowed in combination
      *            with <code>Const.HAM_DISABLE_FREELIST_FLUSH</code> and
-     *            <code>Const.HAM_WRITE_THROUGH</code>.
+     *            <code>Const.HAM_ENABLE_FSYNC</code>.
      *       <li><code>Const.HAM_AUTO_RECOVERY</code></li>
      *            Automatically recover the Database, if necessary. This
      *            flag implies <code>Const.HAM_ENABLE_RECOVERY</code>.
